# CometSpec

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docs.yml
WorkFlow_Example/: WorkFlow.ipynb
WorkFlow_Example/Codes/: Ephemeris_Mean.ipynb  Exploring2.ipynb  Fluorecence.ipynb  Oxygen.ipynb  Reducing_and_stacking_post_peri.ipynb  Super_plot.ipynb
WorkFlow_Example/Ephemeris/: ephemeris_means_by_observation.csv  horizons_results_20250902.txt  horizons_results_20250903.txt  horizons_results_20250908.txt  horizons_results_20250909.txt  horizons_results_20250910.txt  horizons_results_20250911.txt  horizons_results_20250912.txt  horizons_results_20250915.txt  horizons_results_20250916.txt  horizons_results_20250917.txt  horizons_results_20250918.txt  horizons_results_20250919.txt  horizons_results_20250920.txt  horizons_results_20250921.txt  horizons_results_20250922.txt  horizons_results_20250923.txt  horizons_results_20250924.txt  horizons_results_20251125.txt  horizons_results_20251126.txt  horizons_results_20251127.txt  horizons_results_20251204.txt  horizons_results_20251206.txt
cometspec/: MANIFEST.in  pyproject.toml
cometspec/cometspec/: __init__.py  fluorescence.py  helper.py  modeling.py
cometspec/cometspec/data/: Hall_Anderson.txt  __init__.py  fe_normalized.csv
cometspec/cometspec/data/CN/: 12C15N.txt
cometspec/cometspec/data/Element_lines/: Al.txt  Ar.txt  As.txt  Be.txt  Br.txt  C.txt  Ca.txt  Cl.txt  Cr.txt  Cu.txt  F.txt  H.txt  He.txt  Kr.txt  Mg.txt  Ne.txt  O.txt  Rb.txt  S.txt  Sc.txt  Sr.txt  Ti.txt  V.txt
docs/: citation.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/_static/: custom.css
docs/api/: fluorescence.rst  helper.rst  index.rst  modeling.rst
pyfluor/: __init__.py  fluorescence.py  helper.py  modeling.py
pyfluor/data/: __init__.py  neowise_lines.txt
pyfluor/data/Element_lines/: B.txt  Co.txt  Fe.txt  Ga.txt  Ge.txt  K.txt  Li.txt  Mn.txt  N.txt  Na.txt  Ni.txt  P.txt  Se.txt  Si.txt  Y.txt  zinc_lines_air.txt
