[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfluor"
version = "0.1.0"
description = "Fluorescence modeling and MCMC fitting."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Baltasar Luco", email = "baltasarluco@uc.cl"},
]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "matplotlib>=3.5",
    "astropy>=5.0",
    "sbpy>=0.4",
    "emcee>=3.1",
    "corner>=2.2",
    "specutils>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://example.com/FLUO_CN"
Source = "https://example.com/FLUO_CN"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyfluor", "pyfluor.*"]

[tool.setuptools.package-data]
"pyfluor" = ["data/**/*.txt", "data/**/*.dat"]
